--- a/css/styles.css
+++ b/css/styles.css
@@ -61,3 +61,30 @@
   font-size: 45px;
   text-align: center;
 }
+.cont {
+    border: 2px solid #ddd;
+    box-shadow: 0px 0px 5px lightgray;
+  }
+  #comments>#cont1{
+   width: 55%;
+     border: solid 1px gray;
+     height: 50%;
+     padding: 30px;
+   }
+   #comments>#cont2 {
+    width: 50%;
+     border: solid 1px gray;
+     height: 150%;
+     padding: 30px;
+   }
+   #contact {
+    clear: both;
+     display: block;
+     width: 1500px;
+     height: 300px;
+     background-image: url("../images/subscribe.jpg");
+     text-align: center;
+     padding-top: 100px;
+     font-size: 30PX;
+     color: white;
+   }
