--- a/css/styles.css
+++ b/css/styles.css
@@ -103,3 +103,19 @@
      margin: auto;
      font-size: 40px;
     }
+    #content {
+     display: inline-block;
+     width: 75%;
+     margin: 160px;
+     height: 100px;
+     background-color: inherit;
+     text-align: center;
+   }
+   #body2 {
+    clear: both;
+     width: 100%;
+     height: 580px;
+     background-image: url("../images/foodsBg.jpg");
+     height: 300px;
+     image-orientation: center;
+    }
