--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,22 @@
 .jumbotron{
   background-image: url(../images/landing.jpg);
-  margin-right: 28px;
-  font-size: 34px;
+  font-size: 24;
   width: auto;
   height: 600px;
+  background-size: cover;
+  text-align: center;
+  padding: 170px;
+  font-style: normal;
+  color: white;
+  font-family: sans-serif;
+
 }
 .logo{
-  padding-left: 0px;
+  padding-left: 71px;
   margin: 2px 250px;
 }
 .img{
-  margin: 50px;
+  margin: 100px;
 }
 .head{margin-right: 0px 0px;
   padding-right: 20px;
@@ -116,6 +122,39 @@
      width: 100%;
      height: 580px;
      background-image: url("../images/foodsBg.jpg");
-     height: 300px;
+     height: 700px;
      image-orientation: center;
     }
+    .menus {
+     width: 23.5%;
+     display: block;
+     float: left;
+     height: 210px;
+     color: white;
+     font-size: 18;
+     text-align: center;
+     font-style: italic;
+       }
+    .minitop {
+     height: 105px;
+     background-color: lightgrey;
+     color: black;
+   }
+  .minibottom {
+    height: 105px;
+     background-color: #ff5733;
+     color: white;
+     font-family: sans-serif;
+   }
+   #menu2 {
+    background-image: url("../images/breakfast.jpg");
+   }
+
+  #menu3 {
+    background-image: url("../images/lunch.jpg");
+  }
+
+ #menu4 {
+ background-image: url("../images/dinner.jpg");
+  }
+  
