--- a/css/styles.css
+++ b/css/styles.css
@@ -27,9 +27,9 @@
   margin-bottom: 10px;
 }
 .food-pics, .drinks-pics{
-  padding: 21px;
-  border: 4px solid grey;
-  box-shadow: 2px 0px 2px -15px grey;
+  padding: 20px;
+  border: 2px solid grey;
+  box-shadow: 2px 2px px 2px grey;
 }
 #breakfast{
   background-image: url(../images/breakfast.jpg);
@@ -86,7 +86,7 @@
    #contact {
     clear: both;
      display: block;
-     width: 1300px;
+     width: 1420px;
      height: 300px;
      background-image: url("../images/subscribe.jpg");
      text-align: center;
