--- a/css/styles.css
+++ b/css/styles.css
@@ -157,3 +157,26 @@
  #menu4 {
  background-image: url("../images/dinner.jpg");
   }
+.team {
+  text-align: center;
+  width: 90%;
+  height: 50%;
+  border: 1px solid;
+  margin-left: 5%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  box-shadow: 5px 10px 18px #e7e7e7;
+}
+.clearfix{overflow: auto;
+}
+.team h3{
+  margin-top: 30px;
+}
+.team .vl {
+  border-left: 2px solid #D5D8DC;
+  height: 200px;
+  float: right;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background: transparent;
+}
